src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__assign_too_small_type_to_pointer_result_in_an_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E065]: The type DWORD 32 is too small to be stored in a Pointer
  ┌─ <internal>:9:13
  │
9 │             ptr := address;         //should throw error as address is too small to store full pointer
  │             ^^^^^^^^^^^^^^ The type DWORD 32 is too small to be stored in a Pointer

error[E037]: Invalid assignment: cannot assign 'DWORD' to 'REF_TO INT'
  ┌─ <internal>:9:13
  │
9 │             ptr := address;         //should throw error as address is too small to store full pointer
  │             ^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'DWORD' to 'REF_TO INT'
